// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with an express app Assets integration tests hello.js should match snapshot 1`] = `
Object {
  "body": Object {},
  "headers": Object {
    "accept-ranges": "bytes",
    "cache-control": "public, max-age=0",
    "connection": "close",
    "content-type": "application/javascript; charset=UTF-8",
    "x-powered-by": "Express",
  },
  "statusCode": 200,
  "text": "alert('Hello world!');
",
  "type": "application/javascript",
}
`;

exports[`with an express app Function integration tests basic-twiml.js should match snapshot 1`] = `
Object {
  "body": Object {},
  "headers": Object {
    "connection": "close",
    "content-type": "text/xml; charset=utf-8",
    "x-powered-by": "Express",
  },
  "statusCode": 200,
  "text": "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?><Response><Message>Hello World</Message></Response>",
  "type": "text/xml",
}
`;
